# src/routes/individualRoute.ts
@@ -1,6 +1,7 @@
 import express, { type NextFunction, type Request, type Response } from 'express'
 import passport from 'passport'
 import IndividualController from '../controllers/individualController'
+import { upload } from '../services/multer'
 const router = express.Router()
 
 const individualController = new IndividualController()
@@ -88,7 +89,7 @@ router.post('/saveordeletejob',
       })
   },
   (req: Request, res: Response, next: NextFunction) => {
-    individualController.saveJob(req.body.id, req.user)
+    individualController.saveOrDeleteJob(req.body.id, req.user)
       .then(async (result) => {
         res.status(200).json({ message: result })
       })
@@ -96,4 +97,29 @@ router.post('/saveordeletejob',
         next(error)
       })
   })
+
+router.get('/savedjob',
+  passport.authenticate('jwt', { session: false }),
+  (req: Request, res: Response, next: NextFunction) => {
+    individualController.getIndividualSavedJob(req.user)
+      .then(async (result) => {
+        res.status(200).json(result)
+      })
+      .catch(async (error) => {
+        next(error)
+      })
+  })
+
+router.post('/image',
+  passport.authenticate('jwt', { session: false }),
+  (req: Request, res: Response, next: NextFunction) => {
+    upload(req, res, function (error) {
+      if (error !== undefined) {
+        console.log(error.message)
+        next(error)
+      }
+      res.status(200).json({ message: 'success' })
+    })
+  }
+)
 export default router
